fixed header styles for dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,7 @@
     @apply bg-primary-10 dark:bg-primary-960;
   }
   header {
-    @apply border border-b bg-primary-50 dark:border-primary-950 dark:text-primary-50 dark:bg-primary-950;
+    @apply  border-b bg-primary-50 dark:text-primary-50 dark:border-primary-300/20 dark:bg-primary-960;
   }
   footer {
     @apply bg-primary-100 dark:text-primary-50 dark:bg-primary-950;
